# martin

./: .gitignore  .mcp.json  AGENTS.md  ART-DIRECTION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DOMAIN.md  README.md  REUSE.toml  SHADER-BLUEPRINT.md  USAGE.md  build.rs  bundle-camping.toml  bundle.toml  op-de-camping.mid  record.sh  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql.yml  dependabot-automerge.yml
assets/: aegg-flow.seq  aegg-morph.compose  bg.wgsl  bornhack.dae  bornhack.glb  defeest.dae  defeest.glb  defeest.mtl  demo.seq  demo.show  doggo-stage.compose  effects-demo.seq  example.show  op-de-camping-ci.show  op-de-camping.show  reel.seq  score.txt  shader_part.wgsl  show.seq  stage.compose  truck-path.json  truck-show.seq  vrolijk.show
assets/examples/: arc.show  deforms.show  director.show  release.show  shaders.show  stage.show  transitions.show  truck-show.show
dogdemo/: Cargo.toml
dogdemo/src/: main.rs
parts/: README.md
pipeline/: bitterbal_glb.py  crop-splat.py  fetch-aerial.sh  release.sh  render_orbit.py  score_to_midi.py  splat-setup.sh  splat.sh  svg_extrude_logo.py  svg_import.py
productions/: README.md
productions/austin/: austin.show
productions/camping/: SHOWBOOK.md  bundle.toml  camping-ci.show  camping.show
productions/camping/captures/: README.md
productions/cities/: cities-defeest.show  cities.show
productions/intro/: SHOWBOOK.md  bundle.toml  intro.show  score.txt
productions/nyc/: nyc.show
src/: audio.rs  background.rs  bundle.rs  camera.rs  capture.rs  envvar.rs  fourd.rs  glb.rs  loader.rs  main.rs  mcp.rs  mesh.rs  morph.rs  music.rs  score.rs  serve.rs  show.rs  text.rs  validate.rs  waypoints.rs
src/audio/: mod.rs  render.rs  stream.rs
src/scene/: colorize.rs  compose.rs  content.rs  effects.rs  gl_dissolve.rs  mod.rs  sequence.rs  shader_part.rs
src/scene/sequence/: build.rs  director.rs  mod.rs  model.rs  parse.rs
src/score/: dump.rs  mod.rs  parse.rs  types.rs  validate.rs
