[package]
name = "martin"
version = "0.1.0"
edition = "2021"
description = "Fly a camera around a Gaussian splat (and, soon, explode it). Rust + wgpu -> Vulkan, no CUDA."

[dependencies]
bevy = "0.18"
# Select features explicitly (mirrors the crate's defaults) so **sh0** is a feature
# CHOICE here, not a vendored-Cargo.toml edit — our splats are SH degree-0 only.
# Needs nightly (nightly_generic_alias); io_ply + planar load our .ply.
bevy_gaussian_splatting = { version = "7.0.1", default-features = false, features = [
    "io_flexbuffers", "io_ply", "planar", "buffer_storage", "sh0",
    "query_select", "morph_interpolate", "nightly_generic_alias",
    "sort_bitonic", "sort_radix", "sort_rayon", "sort_std",
    "tooling", "viewer", "file_asset", "web_asset",
] }
# Glyph rasterization for splat-text (pure Rust; already in the lockfile transitively).
ab_glyph = "0.2"
# Low-level glyph outlines for pen-write: lets us walk a single-stroke font's contours
# WITHOUT auto-closing them (ab_glyph closes contours, which boxes open strokes). Same
# version ab_glyph already pulls in, so no extra compile.
ttf-parser = "0.25"
# Decode PNG logos into gaussians (logo → splat). Same version Bevy already pulls in.
image = { version = "0.25", default-features = false, features = ["png"] }
# Parse 3DGS `cameras.json` capture poses (MARTIN_CAMERAS). Same version Bevy already pulls in.
serde_json = "1"
# Load meshes (COLLADA .dae, .obj, .stl, .ply) → triangles, to sample into gaussians (mesh: source).
mesh-loader = "0.1"

# Faster iteration: optimize deps hard, our crate lightly.
[profile.dev]
opt-level = 1
debug = "line-tables-only" # keep usable backtraces but shrink the dev binary (was ~1.7 GiB)
[profile.dev.package."*"]
opt-level = 3

# Lean, shippable binary: no debuginfo, thin LTO, single codegen unit, stripped.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# Vendored fork of the splat renderer so we can inject the explosion displacement
# into its WGSL (shaders load via hardcoded-UUID internal assets — no app-side hook).
[patch.crates-io]
bevy_gaussian_splatting = { path = "vendor/bevy_gaussian_splatting" }
