[package]
name = "martin"
version = "0.1.0"
edition = "2024"
description = "Fly a camera around a Gaussian splat (and, soon, explode it). Rust + wgpu -> Vulkan, no CUDA."

[dependencies]
# `wav` enables rodio's WAV decoder — the live synth playback feeds bevy_audio a hand-rolled WAV,
# and Bevy's default audio features are vorbis-only (without this, playback panics UnrecognizedFormat).
bevy = { version = "0.18", features = ["wav"] }
# Select features explicitly (mirrors the crate's defaults) so **sh0** is a feature
# CHOICE here, not a fork Cargo.toml edit — our splats are SH degree-0 only.
# Needs nightly (nightly_generic_alias); io_ply + planar load our .ply.
bevy_gaussian_splatting = { version = "7.0.2", default-features = false, features = [
    "io_flexbuffers", "io_ply", "planar", "buffer_storage", "sh0",
    "query_select", "morph_interpolate", "nightly_generic_alias",
    "sort_bitonic", "sort_radix", "sort_rayon", "sort_std",
    "tooling", "viewer", "file_asset", "web_asset",
] }
# Glyph rasterization for splat-text (pure Rust; already in the lockfile transitively).
ab_glyph = "0.2"
# Low-level glyph outlines for pen-write: lets us walk a single-stroke font's contours
# WITHOUT auto-closing them (ab_glyph closes contours, which boxes open strokes). Same
# version ab_glyph already pulls in, so no extra compile.
ttf-parser = "0.25"
# Decode PNG logos into gaussians (logo → splat) + mesh diffuse textures (PNG/JPEG) sampled at the
# UV. Same version Bevy already pulls in.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Rasterize SVGs into gaussians (svg: source) — pure Rust (usvg + tiny-skia, no C deps → clean
# cross-compiles), so any vector logo/art is just another morph source, like a PNG.
resvg = { version = "0.47", default-features = false }
# Parse 3DGS `cameras.json` capture poses (MARTIN_CAMERAS). Same version Bevy already pulls in.
serde_json = "1"
# Load meshes (COLLADA .dae, .obj, .stl, .ply) → triangles, to sample into gaussians (mesh: source).
mesh-loader = "0.1"
# glTF (.glb/.gltf) loading for `mesh:` — mesh-loader doesn't do glTF, so a separate path samples it.
gltf = { version = "1.4", default-features = false, features = ["import", "utils"] }
# Synth DSP — proper filtered/enveloped voices for the placeholder track. default-features=false
# drops the `files` feature (symphonia/hound); we render to our own hand-rolled WAV.
fundsp = { version = "0.23.0", default-features = false, features = ["std"] }
# Decompress the embedded asset archive in a `--features bundle` single-binary build. Pure Rust
# (no C toolchain → clean cross-compiles), only pulled in for bundled builds.
lz4_flex = { version = "0.13", default-features = false, features = ["std"], optional = true }

[features]
# `cargo build --release --features bundle` IS the bundling pipeline: build.rs reads bundle.toml,
# auto-collects the .ply/PNG the show references, compresses them into the binary; at startup the
# binary self-extracts to a temp dir and plays the baked-in show (no asset files, no env needed).
bundle = ["dep:lz4_flex"]

# Compress the assets at build time for a bundled build (pure Rust; only used when `bundle` is on).
[build-dependencies]
lz4_flex = { version = "0.13", default-features = false, features = ["std"] }

# Faster iteration: optimize deps hard, our crate lightly.
[profile.dev]
opt-level = 1
debug = "line-tables-only" # keep usable backtraces but shrink the dev binary (was ~1.7 GiB)
[profile.dev.package."*"]
opt-level = 3

# Lean, shippable binary: no debuginfo, thin LTO, single codegen unit, stripped.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# Fork of the splat renderer so we can inject the explosion displacement into its WGSL
# (shaders load via hardcoded-UUID internal assets — no app-side hook). Tracked as the
# `martin` branch of annejan/bevy_gaussian_splatting (= upstream 7.0.2 + our §1–7 edits,
# documented in that branch's CHANGES.md); Cargo.lock pins the exact commit. To hack the
# shaders locally, point this at a checkout instead: `path = "../bgs-fork"`.
[patch.crates-io]
bevy_gaussian_splatting = { git = "https://github.com/annejan/bevy_gaussian_splatting", branch = "martin" }
